# pySigma-backend-netwitness

./: README.md  pyproject.toml
.github/workflows/: test.yml
sigma/backends/netwitness/: __init__.py  netwitness.py
sigma/pipelines/netwitness/: __init__.py  netwitness.py
tests/: genRules.py  test_backend_netwitness.py  test_pipelines_netwitness.py
