[tool.poetry]
name = "pySigma-backend-netwitness"
version = "0.1.0"
description = "(OrderedDict([('target_name', 'RSA Netwitness'), ('backend_package_name', 'netwitness'), ('backend_name', 'Netwitness'), ('backend_class_name', 'NetwitnessBackend'), ('package_type', 'backend'), ('package_name', 'pySigma-backend-netwitness'), ('package_description', 'pySigma RSA Netwitness backend'), ('author', 'nNipsx'), ('email', 'nnipsxz@gmail.com'), ('license', 'LGPL-3.0-only'), ('github_account', 'nNipsx-Sec'), ('test_badge', 'True'), ('coverage_badge', 'True'), ('coverage_gist', 'GitHub Gist identifier containing coverage badge JSON expected by shields.io.'), ('status_badge', 'True'), ('status', 'pre--release-orange'), ('additional_output_formats', 'False'), ('output_formats', 'format1,format2'), ('_template', 'https://github.com/SigmaHQ/cookiecutter-pySigma-backend.git')]), Undefined)"
authors = ["nNipsx <nnipsxz@gmail.com>"]
license = "LGPL-3.0-only"
repository = "https://github.com/nNipsx-Sec/pySigma-backend-netwitness"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.6.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
