[tool.poetry]
name = "pySigma-backend-netwitness"
version = "0.1.0"
description = "pySigma Newtiness and Netwitness EPL backend"
authors = ["nNipsx <nnipsxz@gmail.com>"]
license = "LGPL-3.0-only"
repository = "https://github.com/nNipsx-Sec/pySigma-backend-netwitness"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.6.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
